@@ -1,44 +1,13 @@
-FROM fluke667/alpine-glibc:latest
+FROM alpine:3.10
 
-# Java Version
-ENV JAVA_VERSION_MAJOR 8
-ENV JAVA_VERSION_MINOR 221
-ENV JAVA_VERSION_BUILD 11
-ENV JAVA_URL_ELEMENT   230deb18db3e4014bb8e3e8324f81b43
-ENV JAVA_PACKAGE       server-jre
-ENV JAVA_SHA256_SUM    b3f4e835f98286ffcb7191cf4574d70526e108a9ee67c395c56c3ce0ff65e3b3
-
-# Download and unarchive Java
-RUN apk add --update curl tar gzip &&\
-  mkdir -p /opt &&\
-  curl -jkLH "Cookie: oraclelicense=accept-securebackup-cookie" -o java.tar.gz\
-  http://download.oracle.com/otn/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_URL_ELEMENT}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz &&\
-  echo "$JAVA_SHA256_SUM  java.tar.gz" | sha256sum -c - &&\
-  gunzip -c java.tar.gz | tar -xf - -C /opt && rm -f java.tar.gz &&\
-  ln -s /opt/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} /opt/jdk &&\
-  rm -rf /opt/jdk/*src.zip \
-         /opt/jdk/lib/missioncontrol \
-         /opt/jdk/lib/visualvm \
-         /opt/jdk/lib/*javafx* \
-         /opt/jdk/jre/lib/plugin.jar \
-         /opt/jdk/jre/lib/ext/jfxrt.jar \
-         /opt/jdk/jre/bin/javaws \
-         /opt/jdk/jre/lib/javaws.jar \
-         /opt/jdk/jre/lib/desktop \
-         /opt/jdk/jre/plugin \
-         /opt/jdk/jre/lib/deploy* \
-         /opt/jdk/jre/lib/*javafx* \
-         /opt/jdk/jre/lib/*jfx* \
-         /opt/jdk/jre/lib/amd64/libdecora_sse.so \
-         /opt/jdk/jre/lib/amd64/libprism_*.so \
-         /opt/jdk/jre/lib/amd64/libfxplugins.so \
-         /opt/jdk/jre/lib/amd64/libglass.so \
-         /opt/jdk/jre/lib/amd64/libgstreamer-lite.so \
-         /opt/jdk/jre/lib/amd64/libjavafx*.so \
-         /opt/jdk/jre/lib/amd64/libjfx*.so &&\
-  apk del curl tar gzip &&\
-  rm -rf /var/cache/apk/*
-
-# Set environment
-ENV JAVA_HOME /opt/jdk
-ENV PATH ${PATH}:${JAVA_HOME}/bin
+ENV JAVA_HOME /opt/jdk  
+ENV PATH $JAVA_HOME/bin:$PATH  
+ADD https://download.java.net/java/early_access/alpine/27/binaries/openjdk-13-ea+27_linux-x64-musl_bin.tar.gz $JAVA_HOME/openjdk.tar.gz  
+RUN tar --extract --file $JAVA_HOME/openjdk.tar.gz --directory "$JAVA_HOME" --strip-components 1; \  
+    rm $JAVA_HOME/openjdk.tar.gz;
+# jdeps can help identify which modules an application uses
+RUN ["jlink", "--compress=2", \  
+     "--module-path", "/opt/jdk/jmods/", \
+     "--add-modules", "java.base,java.logging,java.naming,java.xml,jdk.sctp,jdk.unsupported", \
+     "--no-header-files", "--no-man-pages", \
+     "--output", "/netty-runtime"]
